fixed overlap

--- a/Saptamana 8/css/All_questions.css
+++ b/Saptamana 8/css/All_questions.css
@@ -1,6 +1,9 @@
 ﻿body{
     margin-top:0;
 }
+.content{
+    display: inline-block;
+}
 .content .title {
     font-size: 28px;
     color: black;
@@ -10,13 +13,21 @@
     user-select: none;
     margin-right: 30px;
 }
+
 .content header {
     position: fixed;
     padding-left: 30px;
-    width:100%; 
+    width: 100%;
     background-color: white;
-    height:70px;
+    height: 70px;
     border-bottom: 2px solid rgba(0,0,0,0.4);
+    float: left;
+}
+.content .questios{
+    position: relative;
+}
+#first{
+    margin-top: 75px;
 
 }
 .qnumber {
